<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EventListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.StubhubAndroid.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.StubhubAndroid.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/radioGroupSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:checkedButton="@+id/radio_city"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:scrollbars="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/city"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_both_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both_end" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/inPut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupSelection"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:singleLine="true"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/ok"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEventList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/inPut"
        android:paddingHorizontal="10dp"
        tools:listitem="@layout/item_row" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotFound"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/inPut"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/result_not_found"
        android:visibility="gone">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_refresh_24"
        app:tint="@android:color/white"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
</RelativeLayout>